# acts-externals

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: buildall.sh
versioning/: CMakeLists.txt
